src/test/ui/associated-const/associated-const-private-impl.stderr
error[E0624]: associated constant `ID` is private
  --> $DIR/associated-const-private-impl.rs:13:19
   |
LL |     assert_eq!(1, bar1::Foo::ID);
   |                   ^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0624`.
